# ephemeral

./: .gitignore  Cargo.toml  Containerfile  build.rs  dockerfile  license  makefile  readme.md  tailwind.config.js
.cargo/: config.toml
.github/workflows/: container-image.yml  container-publish.yml
assets/icons/: bell-alert.html  chat-bubble-bottom-center-text.html  check.html  paper-airplane.html  user-minus.html  user-plus.html  x-mark.html
common/src/: lib.rs
index/: index.html
index/src/: event.rs  main.rs  socket.rs
server/: Cargo.toml
server/src/: main.rs
src/: html.rs  main.rs
src/html/: icons.rs  index.rs  message.rs  not_found.rs
