[package]
name = "ephemeral"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
clap = { version = "4.5.31", features = ["derive"] }
futures = "0.3.31"
maud = { version = "0.27.0", features = ["axum"] }
mime_guess = "2.0.5"
rust-embed = { version = "8.6.0", features = ["include-exclude"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["compression-full", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
